# ai-deal-flow-os

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai_analysis/: deal_scoring.py
app/: __init__.py  run_pipeline.py
app/ai/: __init__.py  client.py  enrich_deals.py  prompts.py  scoring.py
app/api/: main.py
app/automation/: workflow_notes.md
app/chat/: __init__.py  build_index.py  query_chat.py
app/db/: __init__.py  constants.py  ingest.py  init_db.py  models.py  repository.py
app/notion/: client.py  sync_notion.py  test_notion.py
app/processing/: clean_deals.py  dedupe.py
app/scraper/: __init__.py  broker_scraper.py  run_flippa_pipeline.py
app/scraper/sources/: __init__.py  flippa.py
app/utils/: parsing.py
automation/n8n_workflows/: Deal Flow OS - Manual Pipeline Run.json
deal_chat/: rag_pipeline.py
docs/: architecture.md  daily-notes.md  demo-script.md  scope.md
ingestion/: clean_store.py
notion_sync/: notion_push.py
scraper/: scrape_deals.py
tests/: reset_database.py  reset_enrichment_status.py  reset_notion_sync_status.py  test_extraction.py  test_openrouter.py  test_parsing.py  test_view_deals.py  test_view_enriched_deals.py
